# INTEGRATE

./: README.md
INTEGRATE_0_2_5/Integrate/: CMakeLists.txt
INTEGRATE_0_2_5/Integrate/src/: ALGraph.h  Alignment.h  Artifact1.h  BWIndex.h  BWT.cpp  BreakPoint.h  CMakeLists.txt  Constaints.h  Dna.cpp  Dna.h  FocalRegionHandler.cpp  FusionGraph.cpp  FusionGraph.h  HitsCounter.h  LowComplexFinder.h  MyBamWrap.cpp  MyBamWrap.h  Result.cpp  Result.h  RunCode.cpp  RunCode.h  SuffixArray2.h  TidHandler.cpp  Updator.h  Util.cpp  Util.h  main.cpp
INTEGRATE_0_2_5/Integrate/test/: CMakeLists.txt  TestALGraph.cpp  TestBWIndex.cpp
Integrate/src/: .Gene.h.swp  ALGraph.cpp  Alignment.cpp  Artifact1.cpp  BWT.h  BreakPoint.cpp  CMakeLists.txt  FocalRegionHandler.h  Gene.cpp  Gene.h  HitsCounter.cpp  LowComplexFinder.cpp  MyBamHeader.cpp  MyBamHeader.h  MyTypes.h  Result.cpp  Rna.cpp  Rna.h  SuffixArray.h  SuffixArray2.cpp  TidHandler.h  Timer.hpp  Updator.cpp  main.cpp
Integrate/test/: TestSuffixArray.cpp
